challenge 2 layout built, updated readme

--- a/challenge-2-responsive-posts/index.html
+++ b/challenge-2-responsive-posts/index.html
@@ -11,25 +11,32 @@
 
     <!-- create the main wrapper for this component -->
     <section class="posts-component">
-        <article>
-            <img src="" alt="" class="posts-component__img">
-            <p>Aug 1, 2019</p>
-            <h2>How to Create Bootable Linux USB Drive</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam nam illo vel deserunt. Repellat commodi maxime natus totam quisquam fuga, modi vel enim architecto illum asperiores perferendis delectus, id sapiente.</p>
+        <article class="posts-component__article">
+            <img src="./design/usb.jpg" alt="usb drive" class="posts-component__img">
+            <h2 class="posts-component__heading">How to Create Bootable Linux USB Drive</h2>
+            <span class="posts-component__article-date">
+                <p>Aug 1, 2019</p>
+            </span>
+            <p class="posts-component__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam nam illo vel deserunt. Repellat commodi maxime natus totam quisquam fuga, modi vel enim architecto illum asperiores perferendis delectus, id sapiente.</p>
         </article>
 
-        <article>
-            <img src="" alt="" class="posts-component__img">
-            <p>Aug 1, 2019</p>
-            <h2>How to Create Bootable Linux USB Drive</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam nam illo vel deserunt. Repellat commodi maxime natus totam quisquam fuga, modi vel enim architecto illum asperiores perferendis delectus, id sapiente.</p>
+        <article class="posts-component__article">
+            <img src="./design/update.jpg" alt="install updates in cent os" class="posts-component__img">
+            <h2 class="posts-component__heading">How to Create Bootable Linux USB Drive</h2>
+            <span class="posts-component__article-date">
+                <p>Aug 10, 2019</p>
+            </span>
+           
+            <p class="posts-component__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam nam illo vel deserunt. Repellat commodi maxime natus totam quisquam fuga, modi vel enim architecto illum asperiores perferendis delectus, id sapiente.</p>
         </article>
 
-        <article>
-            <img src="" alt="" class="posts-component__img">
-            <p>Aug 1, 2019</p>
-            <h2>How to Create Bootable Linux USB Drive</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam nam illo vel deserunt. Repellat commodi maxime natus totam quisquam fuga, modi vel enim architecto illum asperiores perferendis delectus, id sapiente.</p>
+        <article class="posts-component__article">
+            <img src="./design/docker.jpg" alt="install docker on debian 10" class="posts-component__img">
+            <h2 class="posts-component__heading">How to Create Bootable Linux USB Drive</h2>
+            <span class="posts-component__article-date">
+                <p>Aug 5, 2019</p>
+            </span>
+            <p class="posts-component__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam nam illo vel deserunt. Repellat commodi maxime natus totam quisquam fuga, modi vel enim architecto illum asperiores perferendis delectus, id sapiente.</p>
         </article>
         
     </section>
