--- a/challenge-2-responsive-posts/index.html
+++ b/challenge-2-responsive-posts/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Responsive Posts</title>
     <link rel="stylesheet" href="app.css" />
-    <!-- Icons are optional -->
+    <!-- use of icons are optional -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -13,73 +13,10 @@
     <!--
         Create Responsive layout for showing posts on a blog page. Must be semantic and accessable using only html and css. 
     -->
-
-    <!-- create the main wrapper for this component -->
+    <!-- the main wrapper for this component -->
     <section class="posts-component">
-      <article class="posts-component__article">
-        <img
-          src="./design/usb.jpg"
-          alt="usb drive"
-          class="posts-component__img"
-        />
-        <div class="posts-component__article-date">
-          <i class="fa fa-clock-o"></i>
-          Aug 1, 2019
-        </div>
-        <h2 class="posts-component__heading">
-          How to Create Bootable Linux USB Drive
-        </h2>
-        <p class="posts-component__text">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam nam
-          illo vel deserunt. Repellat commodi maxime natus totam quisquam fuga,
-          modi vel enim architecto illum asperiores perferendis delectus, id
-          sapiente.
-        </p>
-      </article>
-
-      <article class="posts-component__article">
-        <img
-          src="./design/update.jpg"
-          alt="install updates in cent os"
-          class="posts-component__img"
-        />
-        <div class="posts-component__article-date">
-          <i class="fa fa-clock-o"></i>
-          Aug 1, 2019
-        </div>
-        <h2 class="posts-component__heading">
-          How to Create Bootable Linux USB Drive
-        </h2>
-        <p class="posts-component__text">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam nam
-          illo vel deserunt. Repellat commodi maxime natus totam quisquam fuga,
-          modi vel enim architecto illum asperiores perferendis delectus, id
-          sapiente.
-        </p>
-      </article>
-
-      <article class="posts-component__article">
-        <img
-          src="./design/docker.jpg"
-          alt="install docker on debian 10"
-          class="posts-component__img"
-        />
-        <div class="posts-component__article-date">
-          <i class="fa fa-clock-o"></i>
-          Aug 1, 2019
-        </div>
-        <h2 class="posts-component__heading">
-          How to Create Bootable Linux USB Drive
-        </h2>
-        <p class="posts-component__text">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam nam
-          illo vel deserunt. Repellat commodi maxime natus totam quisquam fuga,
-          modi vel enim architecto illum asperiores perferendis delectus, id
-          sapiente.
-        </p>
-      </article>
+      <!-- Remove the line below -->
+      <h3 style="text-align: center">Build your blog posts in here 😁</h3>
     </section>
-
-    <script src="app.js"></script>
   </body>
 </html>
