--- a/challenge-2-responsive-posts/solution/index.html
+++ b/challenge-2-responsive-posts/solution/index.html
@@ -18,7 +18,7 @@
     <section class="posts-component">
       <article class="posts-component__article">
         <img
-          src="./design/usb.jpg"
+          src="./assets/usb.jpg"
           alt="usb drive"
           class="posts-component__img"
         />
@@ -39,7 +39,7 @@
 
       <article class="posts-component__article">
         <img
-          src="./design/update.jpg"
+          src="./assets/update.jpg"
           alt="install updates in cent os"
           class="posts-component__img"
         />
@@ -60,7 +60,7 @@
 
       <article class="posts-component__article">
         <img
-          src="./design/docker.jpg"
+          src="./assets/docker.jpg"
           alt="install docker on debian 10"
           class="posts-component__img"
         />
@@ -79,7 +79,5 @@
         </p>
       </article>
     </section>
-
-    <script src="app.js"></script>
   </body>
 </html>
