modal body styling and button added

--- a/challenge-3-modal/index.html
+++ b/challenge-3-modal/index.html
@@ -8,13 +8,17 @@
     <title>Modal Project</title>
 </head>
     <body>
-
+        <main class="container">
+            <h2>Clicking on this button should trigger the modal</h2>
+            <button class="modal__trigger">Open</button>
+            
+            <div class="modal__overlay">
+                <section class="modal__content">
+                    <h1>This is a modal</h1>
+                </section>
+            </div>
+        </main>
         
-        <div class="modal__overlay">
-            <section class="modal__content">
-                <h1>This is a modal</h1>
-            </section>
-        </div>
 
         <script src="./app.js"></script>
     </body>
