--- a/challenge-3-modal/index.html
+++ b/challenge-3-modal/index.html
@@ -15,6 +15,8 @@
             <div class="modal__overlay">
                 <section class="modal__content">
                     <h1>This is a modal</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt tenetur temporibus minus ipsum itaque doloribus enim quas modi odit nobis quam velit sed odio, laborum maiores iste illum cupiditate accusamus sunt, tempore adipisci corrupti aspernatur autem! Autem quaerat non perferendis ex delectus asperiores natus architecto illum officia facilis, laudantium et.</p>
+                    <button class="modal__trigger">Close</button>
                 </section>
             </div>
         </main>
