--- a/challenge-4/index.html
+++ b/challenge-4/index.html
@@ -5,9 +5,23 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Hello</title>
+        <link rel="stylesheet" href="app.css">
     </head>
 
     <body>
-        
+        <!-- Javascript challenge -->
+        <!-- Create list items -->
+        <!-- select individual list item with event listeners -->
+        <div class="container">
+            <h1>challenge 4 List items structure</h1>
+
+            <div class="list__container">
+                <ul>
+                    <li></li>
+                </ul>
+            </div>
+        </div>
+
+        <script src="app.js"></script>
     </body>
 </html>
