--- a/challenge-4/index.html
+++ b/challenge-4/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Hello</title>
+        <title>VueTube</title>
         <link rel="stylesheet" href="app.css">
     </head>
 
@@ -12,12 +12,63 @@
         <!-- Javascript challenge -->
         <!-- Create list items -->
         <!-- select individual list item with event listeners -->
+        <!-- selecting a video will display its name -->
+        <h2>VueTube</h2>
         <div class="container">
-            <h1>challenge 4 List items structure</h1>
-
+            <div class="video__container">
+                <video src="https://www.youtube.com/watch?v=12o3Zgupu_8&t=14s"></video>
+            </div>
             <div class="list__container">
-                <ul>
-                    <li></li>
+                <ul class="list__side-list">
+                    <li class="list__item">
+                        <img src="https://picsum.photos/150/75?random" alt="">
+                        <div class="list__item-contents">
+                            Video 1
+                            <p>person</p>
+                        </div>
+                    </li>
+                    <li class="list__item">
+                        <img src="https://picsum.photos/150/75" alt="">
+                        <div class="list__item-contents">
+                            Video 2
+                            <p>person</p>
+                        </div>
+                    </li>
+                    <li class="list__item">
+                        <img src="https://picsum.photos/150/75?random=1" alt="">
+                        <div class="list__item-contents">
+                            Video 3
+                            <p>person</p>
+                        </div>
+                    </li>
+                    <li class="list__item">
+                        <img src="https://picsum.photos/150/75?random" alt="">
+                        <div class="list__item-contents">
+                            Video 4
+                            <p>person</p>
+                        </div>
+                    </li>
+                    <li class="list__item">
+                        <img src="https://picsum.photos/150/75" alt="">
+                        <div class="list__item-contents">
+                            Video 5
+                            <p>person</p>
+                        </div>
+                    </li>
+                    <li class="list__item">
+                        <img src="https://picsum.photos/150/75?random" alt="">
+                        <div class="list__item-contents">
+                            Video 6
+                            <p>person</p>
+                        </div>
+                    </li>
+                    <li class="list__item">
+                        <img src="https://picsum.photos/150/75?random" alt="">
+                        <div class="list__item-contents">
+                            Video 7
+                            <p>person</p>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
