event delegation example

--- a/challenge-4/index.html
+++ b/challenge-4/index.html
@@ -21,49 +21,63 @@
             <div class="list__container">
                 <ul class="list__side-list">
                     <li class="list__item">
-                        <img src="https://picsum.photos/150/75?random" alt="">
+                        <img
+                            class="list__image"
+                            src="https://picsum.photos/150/75?random" alt="">
                         <div class="list__item-contents">
                             Video 1
                             <p>person</p>
                         </div>
                     </li>
                     <li class="list__item">
-                        <img src="https://picsum.photos/150/75" alt="">
+                        <img
+                            class="list__image"
+                            src="https://picsum.photos/150/75" alt="">
                         <div class="list__item-contents">
                             Video 2
                             <p>person</p>
                         </div>
                     </li>
                     <li class="list__item">
-                        <img src="https://picsum.photos/150/75?random=1" alt="">
+                        <img
+                            class="list__image"
+                            src="https://picsum.photos/150/75?random=1" alt="">
                         <div class="list__item-contents">
                             Video 3
                             <p>person</p>
                         </div>
                     </li>
                     <li class="list__item">
-                        <img src="https://picsum.photos/150/75?random" alt="">
+                        <img
+                            class="list__image"
+                            src="https://picsum.photos/150/75?random" alt="">
                         <div class="list__item-contents">
                             Video 4
                             <p>person</p>
                         </div>
                     </li>
                     <li class="list__item">
-                        <img src="https://picsum.photos/150/75" alt="">
+                        <img
+                            class="list__image"
+                            src="https://picsum.photos/150/75" alt="">
                         <div class="list__item-contents">
                             Video 5
                             <p>person</p>
                         </div>
                     </li>
                     <li class="list__item">
-                        <img src="https://picsum.photos/150/75?random" alt="">
+                        <img
+                            class="list__image"
+                            src="https://picsum.photos/150/75?random" alt="">
                         <div class="list__item-contents">
                             Video 6
                             <p>person</p>
                         </div>
                     </li>
                     <li class="list__item">
-                        <img src="https://picsum.photos/150/75?random" alt="">
+                        <img
+                            class="list__image"
+                            src="https://picsum.photos/150/75?random" alt="">
                         <div class="list__item-contents">
                             Video 7
                             <p>person</p>
