creating elements and adding them to the video list

--- a/challenge-4/index.html
+++ b/challenge-4/index.html
@@ -14,6 +14,7 @@
         <!-- select individual list item with event listeners -->
         <!-- selecting a video will display its name -->
         <h2>VueTube</h2>
+        <button class="add-video">Upload video</button>
         <div class="container">
             <div class="video__container">
                 <video src="https://www.youtube.com/watch?v=12o3Zgupu_8&t=14s"></video>
@@ -26,7 +27,6 @@
                             src="https://picsum.photos/150/75?random" alt="">
                         <div class="list__item-contents">
                             Video 1
-                            <p>person</p>
                         </div>
                     </li>
                     <li class="list__item">
@@ -35,7 +35,6 @@
                             src="https://picsum.photos/150/75" alt="">
                         <div class="list__item-contents">
                             Video 2
-                            <p>person</p>
                         </div>
                     </li>
                     <li class="list__item">
@@ -44,7 +43,6 @@
                             src="https://picsum.photos/150/75?random=1" alt="">
                         <div class="list__item-contents">
                             Video 3
-                            <p>person</p>
                         </div>
                     </li>
                     <li class="list__item">
@@ -53,34 +51,6 @@
                             src="https://picsum.photos/150/75?random" alt="">
                         <div class="list__item-contents">
                             Video 4
-                            <p>person</p>
-                        </div>
-                    </li>
-                    <li class="list__item">
-                        <img
-                            class="list__image"
-                            src="https://picsum.photos/150/75" alt="">
-                        <div class="list__item-contents">
-                            Video 5
-                            <p>person</p>
-                        </div>
-                    </li>
-                    <li class="list__item">
-                        <img
-                            class="list__image"
-                            src="https://picsum.photos/150/75?random" alt="">
-                        <div class="list__item-contents">
-                            Video 6
-                            <p>person</p>
-                        </div>
-                    </li>
-                    <li class="list__item">
-                        <img
-                            class="list__image"
-                            src="https://picsum.photos/150/75?random" alt="">
-                        <div class="list__item-contents">
-                            Video 7
-                            <p>person</p>
                         </div>
                     </li>
                 </ul>
