--- a/challenge-1-tabs/solution/index.html
+++ b/challenge-1-tabs/solution/index.html
@@ -1,51 +1,76 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Progress navigation</title>
-    <link rel="stylesheet" href="app.css">
-</head>
-<body class="container">
+    <link rel="stylesheet" href="../app.css" />
+  </head>
+  <body class="container">
     <!--
         Create Tabs component, that has several tab buttons. Each button toggles active tab content.
         Add a text input with a button. User can enter any tab index in the input and toggle it by clicking the button.
         Indexes in this task are not the same as they are used in JS, so by entering 1 - first tab should be shown, not 0.
         If invalid index is entered - browser must show an alert.
+        Bonus if you use custom styling 😊
     -->
     <section class="tabs-component">
-        <div class="tabs-component__inputs">
-            <input
-            class="tabs-component__input"
-            type="text"
-            placeholder="Enter tab index">
-            <button
-            class="tabs-component__button">Change tab</button>
-        </div>
-            <!-- since we are not using semantic elements we apply aria-roles to specify
-                How a screen reader would interact with the elements
-            -->
-        <div class="tabs-component__tabs" role="tablist">
-            <span class="tabs-component__item active" role="tab">Positive</span>
-            <span
-            class="tabs-component__item" role="tab">Negative</span>
-            <span
-            class="tabs-component__item" role="tab">Neutral</span>
-        </div>
+      <span>Current index :</span>
+      <span class="tabs-component__index">0</span>
+      <div class="tabs-component__inputs">
+        <input
+          class="tabs-component__input"
+          value="0"
+          min="0"
+          max="2"
+          type="range"
+          placeholder="Enter tab index"
+        />
+        <button class="tabs-component__button">Change tab</button>
+      </div>
+      <!-- since we are not using semantic elements we apply aria-roles to specify
+            How a screen reader would interact with the elements
+        -->
+      <div class="tabs-component__tabs" role="tablist">
+        <button class="tabs-component__item active" role="tab">Positive</button>
+        <button class="tabs-component__item" role="tab">Negative</button>
+        <button class="tabs-component__item" role="tab">Neutral</button>
+      </div>
 
-        <div class="tabs-component__content">
-            <div class="content item-positive" role="tabpanel">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore magnam earum eos natus laudantium soluta eveniet at, quos aperiam perspiciatis.
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum qui id possimus aut officia placeat explicabo molestias dolorum consequuntur temporibus quis repellat in velit laboriosam voluptatem, quam tenetur corporis deserunt!
-                </p>
-            </div>
-            <div class="content item-negative" role="tabpanel">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae maxime ad eveniet voluptatum odio earum iure dolore reiciendis nesciunt nobis error ex id nihil, eligendi sequi quaerat provident. Esse, blanditiis. Odio quam adipisci ullam consequatur nemo magni doloribus dolorem minima?</p>
-            </div>
-            <div class="content item-neutral" role="tabpanel">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus repudiandae deleniti architecto ipsum, nisi error, ducimus nostrum, dolorem ullam ea fugiat explicabo tempora maiores numquam vero totam voluptate iure accusantium cumque vel rerum. Labore quasi impedit, unde nam, dolore quaerat accusamus libero, dolor eum cum magnam rem praesentium porro possimus eius earum! Ullam, quasi natus dolorem eos laboriosam enim dignissimos vel vero deleniti id! Ipsa tempora dolores necessitatibus veritatis sapiente nobis obcaecati mollitia velit odit excepturi hic beatae, corporis corrupti.</p>
-            </div>
+      <div class="tabs-component__content">
+        <div class="content item-positive" role="tabpanel">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
+            magnam earum eos natus laudantium soluta eveniet at, quos aperiam
+            perspiciatis. Lorem ipsum dolor, sit amet consectetur adipisicing
+            elit. Eum qui id possimus aut officia placeat explicabo molestias
+            dolorum consequuntur temporibus quis repellat in velit laboriosam
+            voluptatem, quam tenetur corporis deserunt!
+          </p>
         </div>
+        <div class="content item-negative" role="tabpanel">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae
+            maxime ad eveniet voluptatum odio earum iure dolore reiciendis
+            nesciunt nobis error ex id nihil, eligendi sequi quaerat provident.
+            Esse, blanditiis. Odio quam adipisci ullam consequatur nemo magni
+            doloribus dolorem minima?
+          </p>
+        </div>
+        <div class="content item-neutral" role="tabpanel">
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus
+            repudiandae deleniti architecto ipsum, nisi error, ducimus nostrum,
+            dolorem ullam ea fugiat explicabo tempora maiores numquam vero totam
+            voluptate iure accusantium cumque vel rerum. Labore quasi impedit,
+            unde nam, dolore quaerat accusamus libero, dolor eum cum magnam rem
+            praesentium porro possimus eius earum! Ullam, quasi natus dolorem
+            eos laboriosam enim dignissimos vel vero deleniti id! Ipsa tempora
+            dolores necessitatibus veritatis sapiente nobis obcaecati mollitia
+            velit odit excepturi hic beatae, corporis corrupti.
+          </p>
+        </div>
+      </div>
     </section>
-    
+
     <script src="app.js"></script>
-</body>
+  </body>
 </html>
