--- a/challenge-4/index.html
+++ b/challenge-4/index.html
@@ -14,11 +14,14 @@
         <!-- select individual list item with event listeners -->
         <!-- selecting a video will display its name -->
         <h2>VueTube</h2>
-        <button class="add-video">Upload video</button>
         <div class="container">
-            <div class="video__container">
-                <video src="https://www.youtube.com/watch?v=12o3Zgupu_8&t=14s"></video>
+            <div class="video">
+                <div class="video__container">
+                    <video src="https://www.youtube.com/watch?v=12o3Zgupu_8&t=14s"></video>
+                </div>
+                <button class="add-video">Upload video</button>
             </div>
+           
             <div class="list__container">
                 <ul class="list__side-list">
                     <li class="list__item">
