challenge 2 cleanup and refactor

--- a/challenge-2-responsive-posts/solution/index.html
+++ b/challenge-2-responsive-posts/solution/index.html
@@ -11,14 +11,13 @@
   </head>
   <body class="container">
     <!--
-        Create Responsive layout for showing posts on a blog page. Must be semantic and accessable using only html and css. 
+        Create Responsive layout for showing posts on a blog page. Using only html and css. 
     -->
 
-    <!-- create the main wrapper for this component -->
     <section class="posts-component">
       <article class="posts-component__article">
         <img
-          src="./assets/usb.jpg"
+          src="../assets/usb.jpg"
           alt="usb drive"
           class="posts-component__img"
         />
@@ -39,7 +38,7 @@
 
       <article class="posts-component__article">
         <img
-          src="./assets/update.jpg"
+          src="../assets/update.jpg"
           alt="install updates in cent os"
           class="posts-component__img"
         />
@@ -60,7 +59,7 @@
 
       <article class="posts-component__article">
         <img
-          src="./assets/docker.jpg"
+          src="../assets/docker.jpg"
           alt="install docker on debian 10"
           class="posts-component__img"
         />
