--- a/challenge-2-responsive-posts/index.html
+++ b/challenge-2-responsive-posts/index.html
@@ -13,6 +13,7 @@
     <!--
         Create Responsive layout for showing posts on a blog page. Must be semantic and accessable using only html and css. 
     -->
+    <!-- relative path to images example `./assets/update.jps` -->
     <!-- the main wrapper for this component -->
     <section class="posts-component">
       <!-- Remove the line below -->
